[package]
edition = "2021"
name = "user_port_try_from_u16"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = {version = "1.0.47"}
quote = {version = "1.0.9"}
proc_macro_helpers = {path = "../proc_macro_helpers"}
